# sarkara

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: aead.rs  box.rs  bytes.rs  stream.rs  utils.rs
src/: common.rs  lib.rs
src/aead/: ascon.rs  general.rs  general_riv.rs  mod.rs  norx.rs  norx6441.rs  norx_mrs.rs  riv_general.rs  sparx256colm0.rs
src/auth/: mod.rs  qhmac.rs
src/hash/: blake2.rs  mod.rs
src/kex/: kyber.rs  mod.rs  newhope.rs  sidh.rs
src/pwhash/: argon2.rs  mod.rs
src/sealedbox/: mod.rs
src/secretbox/: mod.rs
src/sign/: bliss.rs  dilithium.rs  mod.rs
src/stream/: hc128.rs  hc256.rs  mod.rs  rabbit.rs
src/utils/: bytes.rs  mod.rs  nonce.rs  rand_macro.rs  secbytes.rs
tests/: aead.rs  bytes.rs  kex.rs  sealedbox.rs  secbytes.rs  secretbox.rs  sign.rs
