[package]
name = "sarkara"
version = "0.10.0-alpha"
authors = ["quininer kel <quininer@live.com>"]
description = "A experimental post-quantum cryptography library."
repository = "https://github.com/quininer/sarkara"
documentation = "https://docs.rs/sarkara/"
keywords = [ "post-quantum", "cryptography" ]
license = "MIT"
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "quininer/sarkara" }
appveyor = { repository = "quininer/sarkara" }

[badges.maintenance]
status = "experimental"

[dependencies]
rand = "*"
arrayref = "*"
seckey = "*"
failure = "*"
failure_derive = "*"
kyber = { git = "https://github.com/quininer/kyber" }
dilithium = { git = "https://github.com/quininer/dilithium" }
sparx-cipher = { version = "*", default-features = false, features = [ "x128_256" ] }
colm = { version = "*", default-features = false, features = [ "x32" ] }
