[package]
name = "sarkara"
version = "0.10.0-alpha.1"
authors = ["quininer kel <quininer@live.com>"]
description = "A experimental post-quantum cryptography library."
repository = "https://github.com/quininer/sarkara"
documentation = "https://docs.rs/sarkara/"
keywords = [ "post-quantum", "cryptography" ]
license = "MIT"
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "quininer/sarkara" }
appveyor = { repository = "quininer/sarkara" }

[badges.maintenance]
status = "experimental"

[dependencies]
rand = "0.4"
arrayref = "0.3"
seckey = { version = "0.7", features = [ "nightly" ] }
failure = "0.1"
kyber = "0.2.0-alpha.1"
dilithium = "0.1.1"
norx = { version = "0.1", default-features = false, features = [ "W64", "L4", "P1" ] }

[dependencies.sidh]
git = "https://github.com/etairi/sidh-rs"
default-features = false
features = [ "nightly", "std" ]
optional = true

[features]
extra = [ "sidh" ]
simd = [ "norx/simd" ]
